--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,5 +8,8 @@
     <string name="label_stop">ストップ</string>
     <string name="label_settings">アラーム設定</string>
     
+    <string name="button_progress_backward">減らす</string>
+    <string name="button_progress_forward">増やす</string>
+    
     
 </resources>
